--- a/package.json
+++ b/package.json
@@ -14,19 +14,13 @@
   },
   "license": "MIT",
   "author": {
-    "name": "Elouann Panda",
+    "name": "Elouann H.",
     "email": "elouannpro@proton.me"
   },
   "contributors": [
     {
-      "name": "Elouann Panda",
+      "name": "Elouann H.",
       "email": "elouannpro@proton.me"
-    }
-  ],
-  "funding": [
-    {
-      "type": "individual",
-      "url": "https://paypal.me/elouannpanda?country.x=FR&locale.x=fr_FR"
     }
   ],
   "main": "lib/index.js",
@@ -39,14 +33,15 @@
     "prettier": "prettier -w src",
     "save": "git add ./",
     "build": "npm run run-builder && npm run prettier && tsc && npm run save",
-    "dev": "npm install @elouannh/hashi@latest && npm run build && node .",
+    "start": "npm run build && node .",
+    "dev": "npm install @elouannh/hashi@latest && npm run start",
     "prepublish": "npm run build && git commit -m \"[AUTO] Build\"",
     "publish-patch": "npm version patch && git push && git push --tags",
     "publish-minor": "npm version minor && git push && git push --tags",
     "publish-major": "npm version major && git push && git push --tags"
   },
   "dependencies": {
-    "@elouannh/hashi": "^0.2.6",
+    "@elouannh/hashi": "^0.3.8",
     "prettier": "^3.1.1"
   },
   "engines": {
