--- a/package.json
+++ b/package.json
@@ -49,17 +49,18 @@
     "lint": "tslint --config tslint.json --project tsconfig.json 'src/**/*.ts' > linter-output.txt",
     "clean": "npm run prettier && npm run lint",
     "build": "npm run clean && npm run run-builder && tsc && git add .",
-    "prepublish": "npm run build && git commit -m \"[BUILD] ${MESSAGE}\"",
-    "test-ts": "ts-node lab/lab.test.ts",
+    "prepublish": "npm run build && git commit -m \"[BUILD] Automatic build\"",
+    "test-ts": "ts-node src/index.ts",
     "post-version-push": "git push && git push --tags",
     "publish-patch": "npm version patch && npm run post-version-push",
     "publish-minor": "npm version minor && npm run post-version-push",
     "publish-major": "npm version major && npm run post-version-push",
-    "publish-prerel": "npm version prerelease --preid=${TAG} && npm run post-version-push"
+    "publish-prerel": "npm version prerelease --preid=prerelease && npm run post-version-push"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "marikobot-hashi": "^2.0.1-devbuild.1"
+    "marikobot-hashi": "^2.0.1-devbuild.1",
+    "pdfjs-dist": "^4.0.379"
   },
   "devDependencies": {
     "eslint": "^8.53.0",
