First working template with hashi 4.2.2

--- a/package.json
+++ b/package.json
@@ -44,33 +44,29 @@
     "url": "git+https://github.com/MarikoBot/hashi-template.git"
   },
   "scripts": {
-    "run-builder": "node builder.js",
     "prettier": "prettier -w src",
-    "lint": "tslint --config tslint.json --project tsconfig.json 'src/**/*.ts' > out/linter-output.txt",
-    "clean": "npm run prettier && npm run lint",
-    "build": "npm run clean && npm run run-builder && tsc && git add .",
-    "prepublish": "npm run build && git commit -m \"[BUILD] Automatic build\"",
-    "test-ts": "ts-node lab/lab.test.ts",
-    "dev": "npm run build && node ./lib/index.js",
-    "post-version-push": "git add . && git push && git push --tags",
-    "publish-patch": "npm version patch && npm run post-version-push",
-    "publish-minor": "npm version minor && npm run post-version-push",
-    "publish-major": "npm version major && npm run post-version-push",
-    "publish-prerel": "npm version prerelease --preid=prerelease && npm run post-version-push"
+    "lint": "eslint",
+    "clean": "npm run prettier && npm run lint"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
-    "marikobot-hashi": "^4.0.0"
+    "marikobot-hashi": "^4.2.2"
   },
   "devDependencies": {
-    "eslint": "^8.53.0",
+    "@eslint/js": "^9.1.1",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
+    "eslint": "^8.57.0",
+    "globals": "^15.1.0",
     "prettier": "^2.8.4",
     "ts-node": "^10.9.2",
-    "tslint": "^6.1.3",
-    "tslint-config-prettier": "^1.18.0"
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.7.1"
   },
   "engines": {
-    "node": ">=22.0.0",
-    "npm": ">=10.2.0"
+    "node": ">=20.12.2",
+    "npm": ">=10.2.0",
+    "pnpm": ">=9.0.6"
   }
 }
